@@ -24,7 +24,7 @@
 
 /**
  * @test id=nocoops_nocoh
- * @summary Test Loading of default archives in all configurations
+ * @summary Test Loading of default archives in all configurations (requires --enable-cds-archive-nocoh)
  * @requires vm.cds
  * @requires vm.cds.default.archive.available
  * @requires vm.cds.write.archived.java.heap
@@ -37,7 +37,7 @@
 
 /**
  * @test id=nocoops_coh
- * @summary Test Loading of default archives in all configurations (requires --enable-cds-archive-coh)
+ * @summary Test Loading of default archives in all configurations
  * @requires vm.cds
  * @requires vm.cds.default.archive.available
  * @requires vm.cds.write.archived.java.heap
@@ -50,7 +50,7 @@
 
 /**
  * @test id=coops_nocoh
- * @summary Test Loading of default archives in all configurations
+ * @summary Test Loading of default archives in all configurations (requires --enable-cds-archive-nocoh)
  * @requires vm.cds
  * @requires vm.cds.default.archive.available
  * @requires vm.cds.write.archived.java.heap
@@ -64,7 +64,7 @@
 
 /**
  * @test id=coops_coh
- * @summary Test Loading of default archives in all configurations (requires --enable-cds-archive-coh)
+ * @summary Test Loading of default archives in all configurations
  * @requires vm.cds
  * @requires vm.cds.default.archive.available
  * @requires vm.cds.write.archived.java.heap
@@ -82,13 +82,16 @@ import java.nio.file.Paths;
 import jdk.test.lib.Platform;
 import jdk.test.lib.process.OutputAnalyzer;
 import jdk.test.lib.process.ProcessTools;
+import jdk.test.lib.Utils;
 
 import jtreg.SkippedException;
 
 public class TestDefaultArchiveLoading {
 
+    static String archivePreviewSuffix = "";
+
     private static String archiveName(String archiveSuffix) {
-        return "classes" + archiveSuffix + ".jsa";
+        return "classes" + archiveSuffix + archivePreviewSuffix + ".jsa";
     }
 
     private static Path archivePath(String archiveSuffix) {
@@ -110,11 +113,17 @@ public class TestDefaultArchiveLoading {
 
         String archiveSuffix;
         char coh, coops;
+        for (String opt : Utils.getTestJavaOpts()) {
+            if (opt.contains("--enable-preview")) {
+                archivePreviewSuffix = "_preview";
+                break;
+            }
+        }
 
         switch (args[0]) {
             case "nocoops_nocoh":
                 coh = coops = '-';
-                archiveSuffix = "_nocoops";
+                archiveSuffix = "_nocoops_nocoh";
                 if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
                     throw new SkippedException("Skipping test due to " +
                                                archivePath(archiveSuffix).toString() + " not available");
@@ -123,7 +132,7 @@ public class TestDefaultArchiveLoading {
             case "nocoops_coh":
                 coops = '-';
                 coh = '+';
-                archiveSuffix = "_nocoops_coh";
+                archiveSuffix = "_nocoops";
                 if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
                     throw new SkippedException("Skipping test due to " +
                                                archivePath(archiveSuffix).toString() + " not available");
@@ -132,7 +141,7 @@ public class TestDefaultArchiveLoading {
             case "coops_nocoh":
                 coops = '+';
                 coh = '-';
-                archiveSuffix = "";
+                archiveSuffix = "_nocoh";
                 if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
                     throw new SkippedException("Skipping test due to " +
                                                archivePath(archiveSuffix).toString() + " not available");
@@ -140,7 +149,7 @@ public class TestDefaultArchiveLoading {
                 break;
             case "coops_coh":
                 coh = coops = '+';
-                archiveSuffix = "_coh";
+                archiveSuffix = "";
                 if (!isArchiveAvailable(coops, coh, archiveSuffix)) {
                     throw new SkippedException("Skipping test due to " +
                                                archivePath(archiveSuffix).toString() + " not available");
