@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2025, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -39,9 +39,10 @@ import java.lang.reflect.Field;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
+import java.util.List;
 import java.util.jar.JarEntry;
 import java.util.jar.JarOutputStream;
+import jdk.jshell.Snippet.Status;
 
 import org.junit.jupiter.api.Test;
 
@@ -98,13 +99,7 @@ public class JavadocTest extends KullaTesting {
 
         compiler.compile(clazz);
 
-        try {
-            Field availableSources = getAnalysis().getClass().getDeclaredField("availableSources");
-            availableSources.setAccessible(true);
-            availableSources.set(getAnalysis(), Arrays.asList(srcZip));
-        } catch (NoSuchFieldException | IllegalArgumentException | IllegalAccessException ex) {
-            throw new IllegalStateException(ex);
-        }
+        setJDKSourcesOverride(List.of(srcZip));
         addToClasspath(compiler.getClassDir());
     }
 
@@ -147,13 +142,169 @@ public class JavadocTest extends KullaTesting {
             throw new IllegalStateException(ex);
         }
 
+        setJDKSourcesOverride(List.of(srcZip));
+    }
+
+    @Test
+    public void testJavadocFromSnippets() {
+        assertEval("""
+                   /**SnippetClazz top level.*/
+                   class SnippetClazz {
+                       /**Method javadoc.*/
+                       public static void test() {}
+                       /**SnippetClazzNested nested.*/
+                       static class SnippetClazzNested {
+                           /**Nested method javadoc.*/
+                           public static void nestedMethod() {}
+                       }
+                   }
+                   """);
+        assertEval("""
+                   /**topLevel method.*/
+                   void topLevel(SnippetClazz clazz) {}
+                   """);
+        assertEval("""
+                   /**topLevel variable.*/
+                   int variable = 0;
+                   """);
+        assertJavadoc("SnippetClazz|",
+                      """
+                      SnippetClazz
+                      SnippetClazz top level.""");
+        assertJavadoc("SnippetClazz.SnippetClazzNested|",
+                      """
+                      SnippetClazz.SnippetClazzNested
+                      SnippetClazzNested nested.""");
+        assertJavadoc("SnippetClazz.test(|",
+                      """
+                      void SnippetClazz.test()
+                      Method javadoc.""");
+        assertJavadoc("SnippetClazz.SnippetClazzNested.nestedMethod(|",
+                      """
+                      void SnippetClazz.SnippetClazzNested.nestedMethod()
+                      Nested method javadoc.""");
+        assertJavadoc("topLevel(|",
+                      """
+                      void topLevel(SnippetClazz clazz)
+                      topLevel method.""");
+        assertJavadoc("variable|",
+                      """
+                      variable:int
+                      topLevel variable.""");
+    }
+
+    @Test
+    public void testJavadocFromSnippetsMarkdown() {
+        assertEval("""
+                   ///SnippetClazz top level.
+                   class SnippetClazz {
+                       ///Method javadoc.
+                       public static void test() {}
+                       ///SnippetClazzNested nested.
+                       static class SnippetClazzNested {
+                           ///Nested method javadoc.
+                           public static void nestedMethod() {}
+                           }
+                   }
+                   """);
+        assertEval("""
+                   ///topLevel method.
+                   public static void topLevel(SnippetClazz clazz) {}
+                   """);
+        assertEval("""
+                   ///topLevel variable.
+                   int variable = 0;
+                   """);
+        assertJavadoc("SnippetClazz|",
+                      """
+                      SnippetClazz
+                      SnippetClazz top level.""");
+        assertJavadoc("SnippetClazz.SnippetClazzNested|",
+                      """
+                      SnippetClazz.SnippetClazzNested
+                      SnippetClazzNested nested.""");
+        assertJavadoc("SnippetClazz.test(|",
+                      """
+                      void SnippetClazz.test()
+                      Method javadoc.""");
+        assertJavadoc("SnippetClazz.SnippetClazzNested.nestedMethod(|",
+                      """
+                      void SnippetClazz.SnippetClazzNested.nestedMethod()
+                      Nested method javadoc.""");
+        assertJavadoc("topLevel(|",
+                      """
+                      void topLevel(SnippetClazz clazz)
+                      topLevel method.""");
+        assertJavadoc("variable|",
+                      """
+                      variable:int
+                      topLevel variable.""");
+    }
+
+    @Test
+    public void testOverrideSnippet() {
+        var originalClass =
+            classKey(assertEval("""
+                                ///bad javadoc
+                                class SnippetClazz {
+                                }
+                                """));
+        assertEval("""
+                   ///SnippetClazz top level.
+                   class SnippetClazz implements java.io.Serializable {
+                   }
+                   """,
+                   ste(MAIN_SNIPPET, Status.VALID, Status.VALID, true, null),
+                   ste(originalClass, Status.VALID, Status.OVERWRITTEN, false, MAIN_SNIPPET));
+        var originalMethod=
+            methodKey(assertEval("""
+                                 ///bad javadoc
+                                 public static void topLevel(SnippetClazz clazz) {}
+                                 """));
+        assertEval("""
+                   ///topLevel method.
+                   public static String topLevel(SnippetClazz clazz) { return ""; }
+                   """,
+                   ste(MAIN_SNIPPET, Status.VALID, Status.VALID, true, null),
+                   ste(originalMethod, Status.VALID, Status.OVERWRITTEN, false, MAIN_SNIPPET));
+        var originalVar =
+            varKey(assertEval("""
+                              ///bad javadoc
+                              int variable = 0;
+                              """));
+        assertEval("""
+                   ///topLevel variable.
+                   String variable = "";
+                   """,
+                   ste(MAIN_SNIPPET, Status.VALID, Status.VALID, true, null),
+                   ste(originalVar, Status.VALID, Status.OVERWRITTEN, false, MAIN_SNIPPET));
+        assertJavadoc("SnippetClazz|",
+                      """
+                      SnippetClazz
+                      SnippetClazz top level.""");
+        assertJavadoc("topLevel(|",
+                      """
+                      String topLevel(SnippetClazz clazz)
+                      topLevel method.""");
+        assertJavadoc("variable|",
+                      """
+                      variable:java.lang.String
+                      topLevel variable.""");
+    }
+
+    @Override
+    public void tearDown() {
+        setJDKSourcesOverride(null);
+        super.tearDown();
+    }
+
+    private void setJDKSourcesOverride(List<Path> override) {
         try {
-            Field availableSources = getAnalysis().getClass().getDeclaredField("availableSources");
+            Field availableSources = getAnalysis().getClass().getDeclaredField("jdkSourcesOverride");
             availableSources.setAccessible(true);
-            availableSources.set(getAnalysis(), Arrays.asList(srcZip));
+            availableSources.set(getAnalysis(), override);
         } catch (NoSuchFieldException | IllegalArgumentException | IllegalAccessException ex) {
             throw new IllegalStateException(ex);
         }
     }
-
 }
